feat : fix error delete user, add get by id(comment, photo and socialmedia)
