# controllers/userController.go
@@ -20,7 +20,11 @@ var appJSON = "application/json"
 // @Tags         User
 // @Accept       json
 // @Produce      json
-// @Param        json  body   models.User   true  "User"
+// @Param        email formData string true "User's Email"
+// @Param        username formData string true "User's Username"
+// @Param        age formData int true "User's Age"
+// @Param        password formData string true "User's Password"
+// @Param        profile_image_url formData string true "User's Profile Image URL"
 // @Success      201  {object}   models.User
 // @Router       /users/register [post]
 func UserRegister(c *gin.Context) {
@@ -68,10 +72,11 @@ func UserRegister(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusCreated, gin.H{
-		"age":      user.Age,
-		"email":    user.Email,
-		"id":       user.ID,
-		"username": user.Username,
+		"age":               user.Age,
+		"email":             user.Email,
+		"id":                user.ID,
+		"username":          user.Username,
+		"profile_image_url": user.ProfileImageURL,
 	})
 }
 
@@ -81,7 +86,8 @@ func UserRegister(c *gin.Context) {
 // @Tags         User
 // @Accept       json
 // @Produce      json
-// @Param        json  body  models.User   true  "User"
+// @Param        email formData string true "User's Email"
+// @Param        username formData string true "User's Username"
 // @Success      200  {object}  models.User
 // @Router       /users/login	  [post]
 func UserLogin(c *gin.Context) {
@@ -134,7 +140,11 @@ func UserLogin(c *gin.Context) {
 // @Tags         User
 // @Accept       json
 // @Produce      json
-// @Param        json  body  models.User   true  "User"
+// @Param        email formData string true "User's Email"
+// @Param        username formData string true "User's Username"
+// @Param        age formData int true "User's Age"
+// @Param        password formData string true "User's Password"
+// @Param        profile_image_url formData string true "User's Profile Image URL"
 // @Success      200  {string}  models.User
 // @Security     Bearer
 // @Router       /users [put]
@@ -150,7 +160,6 @@ func UserUpdate(c *gin.Context) {
 			"error":   "Bad Request",
 			"message": "Invalid user id",
 		})
-
 		return
 	}
 
@@ -200,11 +209,12 @@ func UserUpdate(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, gin.H{
-		"id":         user.ID,
-		"email":      user.Email,
-		"username":   user.Username,
-		"updated_at": user.UpdatedAt,
-		"age":        user.Age,
+		"id":                user.ID,
+		"email":             user.Email,
+		"username":          user.Username,
+		"updated_at":        user.UpdatedAt,
+		"age":               user.Age,
+		"profile_image_url": user.ProfileImageURL,
 	})
 
 }
@@ -218,28 +228,55 @@ func UserUpdate(c *gin.Context) {
 // @Success      200  {object}  []interface{}  "Your comment has been successfully deleted"
 // @Security     Bearer
 // @Router       /users					[delete]
-func UserDelete(c *gin.Context) {
-	db := database.GetDB()
-	userData := c.MustGet("userData").(jwt.MapClaims)
-	user := models.User{}
-
-	userID := uint(userData["id"].(float64))
-
-	user.ID = userID
-
-	err := db.Model(&user).Where("id = ?", userID).Delete(&user).Error
-
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error":   "Bad Request",
-			"message": err.Error(),
+func UserDelete(ctx *gin.Context) {
+	userData, exists := ctx.Get("userData")
+	if !exists {
+		ctx.JSON(http.StatusInternalServerError, gin.H{
+			"error":   "Internal Server Error",
+			"message": "User data not found in context",
 		})
-
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
+	claims, ok := userData.(jwt.MapClaims)
+	if !ok {
+		ctx.JSON(http.StatusInternalServerError, gin.H{
+			"error":   "Internal Server Error",
+			"message": "Failed to parse user data",
+		})
+		return
+	}
+
+	userIDFloat, ok := claims["id"].(float64)
+	if !ok {
+		ctx.JSON(http.StatusInternalServerError, gin.H{
+			"error":   "Internal Server Error",
+			"message": "Invalid user ID data type",
+		})
+		return
+	}
+
+	userID := uint(userIDFloat)
+	// Mendapatkan data pengguna dari database
+	var user models.User
+	if err := database.GetDB().First(&user, userID).Error; err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{
+			"error":   "Internal Server Error",
+			"message": "Failed to retrieve user data",
+		})
+		return
+	}
+
+	// Menghapus pengguna dari database
+	if err := database.GetDB().Where("id = ?", userID).Delete(&models.User{}).Error; err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{
+			"error":   "Internal Server Error",
+			"message": "Failed to delete user account",
+		})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{
 		"message": "Your account has been successfully deleted",
 	})
-
 }
