# docs/swagger.json
@@ -58,13 +58,18 @@
                 "summary": "Create an comment",
                 "parameters": [
                     {
-                        "description": "Comment",
-                        "name": "json",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Comment"
-                        }
+                        "type": "string",
+                        "description": "Comments's Message",
+                        "name": "message",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Comments's Photo ID",
+                        "name": "photo_id",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -77,7 +82,42 @@
                 }
             }
         },
-        "/comments/{id}": {
+        "/comments/{commentId}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Retrieve a comment by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Comment"
+                ],
+                "summary": "Get a comment by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Comment ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Comment"
+                        }
+                    }
+                }
+            },
             "put": {
                 "security": [
                     {
@@ -104,13 +144,11 @@
                         "required": true
                     },
                     {
-                        "description": "Comment",
-                        "name": "json",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Comment"
-                        }
+                        "type": "string",
+                        "description": "Comments's Message",
+                        "name": "message",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -207,13 +245,25 @@
                 "summary": "Create an photo",
                 "parameters": [
                     {
-                        "description": "Photo",
-                        "name": "json",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Photo"
-                        }
+                        "type": "string",
+                        "description": "Photo's Title",
+                        "name": "title",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Photo's Caption",
+                        "name": "caption",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Photo's Photo URL",
+                        "name": "photo_url",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -226,7 +276,42 @@
                 }
             }
         },
-        "/photos/{id}": {
+        "/photos/{photoId}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Retrieve a photo by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Photo"
+                ],
+                "summary": "Get a photo by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Photo ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Photo"
+                        }
+                    }
+                }
+            },
             "put": {
                 "security": [
                     {
@@ -253,13 +338,25 @@
                         "required": true
                     },
                     {
-                        "description": "Photo",
-                        "name": "json",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Photo"
-                        }
+                        "type": "string",
+                        "description": "Photo's Title",
+                        "name": "title",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Photo's Caption",
+                        "name": "caption",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Photo's Photo URL",
+                        "name": "photo_url",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -356,13 +453,18 @@
                 "summary": "Create an socialMedia",
                 "parameters": [
                     {
-                        "description": "SocialMedia",
-                        "name": "json",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.SocialMedia"
-                        }
+                        "type": "string",
+                        "description": "Social Media's Name",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Social Media's Social Media URL",
+                        "name": "social_media_url",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -375,7 +477,42 @@
                 }
             }
         },
-        "/socialmedias/{id}": {
+        "/socialmedias/{socialMediaId}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Retrieve social media by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Social Media"
+                ],
+                "summary": "Get social media by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Social Media ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SocialMedia"
+                        }
+                    }
+                }
+            },
             "put": {
                 "security": [
                     {
@@ -399,6 +536,20 @@
                         "description": "SocialMedia ID",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Social Media's Name",
+                        "name": "name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Social Media's Social Media URL",
+                        "name": "social_media_url",
+                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -467,13 +618,39 @@
                 "summary": "Update an user",
                 "parameters": [
                     {
-                        "description": "User",
-                        "name": "json",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
+                        "type": "string",
+                        "description": "User's Email",
+                        "name": "email",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User's Username",
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "User's Age",
+                        "name": "age",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User's Password",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User's Profile Image URL",
+                        "name": "profile_image_url",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -530,13 +707,18 @@
                 "summary": "Show an user",
                 "parameters": [
                     {
-                        "description": "User",
-                        "name": "json",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
+                        "type": "string",
+                        "description": "User's Email",
+                        "name": "email",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User's Username",
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -564,13 +746,39 @@
                 "summary": "Create an user",
                 "parameters": [
                     {
-                        "description": "User",
-                        "name": "json",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
+                        "type": "string",
+                        "description": "User's Email",
+                        "name": "email",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User's Username",
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "User's Age",
+                        "name": "age",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User's Password",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User's Profile Image URL",
+                        "name": "profile_image_url",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -685,6 +893,9 @@
                     "type": "integer"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "profile_image_url": {
                     "type": "string"
                 },
                 "updated_at": {
