# models/socialMedia.go
@@ -10,7 +10,7 @@ import (
 type SocialMedia struct {
 	GormModel
 	Name           string `json:"name" gorm:"not null" form:"name" valid:"required~Social Media Name is required"`
-	SocialMediaUrl string `json:"social_media_url" gorm:"not null" form:"social_media_url" valid:"required~social media url is required"`
+	SocialMediaUrl string `json:"social_media_url" gorm:"not null" form:"social_media_url" valid:"required~Social Media URL is required, url~Invalid URL format"`
 	UserId         uint   `json:"user_id" form:"user_id"`
 	User           *User  `json:"user"`
 }
@@ -25,6 +25,10 @@ func (s *SocialMedia) BeforeCreate(tx *gorm.DB) (err error) {
 
 	err = nil
 	return
+}
+
+func (SocialMedia) TableName() string {
+	return "social_medias"
 }
 
 func (s *SocialMedia) BeforeUpdate(tx *gorm.DB) (err error) {
